# WebATM

./: .assets-version  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.integrated  README.md  WebATM.py  conftest.py  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-publish.yml  frontend-ci.yml  python-ci.yml
WebATM/: __init__.py  app.py  bluesky_client.py  logger.py  main.py  utils.py
WebATM-integrated/: conftest.py  pyproject.toml
WebATM-integrated/tests/: test_auto_start.py  test_log_streamer.py  test_process_manager.py  test_socket_handlers.py
WebATM-integrated/webatm_integrated/: __init__.py  auto_start.py  bluesky_paths.py  log_streamer.py  process_manager.py  routes.py  socket_handlers.py
WebATM/proxy/: __init__.py  core.py  perf.py  subscribers.py
WebATM/proxy/handlers/: __init__.py  _base.py  commands.py  echo.py  events.py  navigation.py  routes.py  shapes.py  simulation.py  visualization.py
WebATM/proxy/managers/: __init__.py  command_processor.py  connection_manager.py  data_manager.py  node_manager.py
WebATM/server/: __init__.py  bluesky_server_status.py  routes.py  session_manager.py  socket_handlers.py
WebATM/static/css/: style.css
WebATM/static/map/: offline-style-light.json  offline-style.json
WebATM/static/models/aircraft/: A320.glb  A320_nologo.glb  A350.glb  A350_nologo.glb  A380.glb  A380_nologo.glb  B787.glb  B787_nologo.glb  EVTOL.glb  EVTOL_nologo.glb  drone.glb  drone_nologo.glb
WebATM/static/ts/: package-lock.json  package.json  webpack.config.js
WebATM/static/ts/src/: main.ts
WebATM/static/ts/src/core/: App.ts  SocketManager.ts  StateManager.ts
WebATM/static/ts/src/data/: CommandHandler.ts  DataProcessor.ts  types.ts
WebATM/static/ts/src/ui/: BlueSkyFileManager.ts  Console.ts  Controls.ts  Header.ts  Modals.ts  ServerManager.ts
WebATM/static/ts/src/utils/: Logger.ts  StorageManager.ts
WebATM/templates/: index.html
demo-deploy/: .env.example  .gitignore  README.md  docker-compose.yml
demo-deploy/capacity_full/: capacity-full.html
demo-deploy/controller/: controller.py
demo-deploy/traefik/: traefik.yml
demo-deploy/traefik/dynamic/: base.yml
deploy/: .env.example  .gitignore  README.md
deploy/capacity_full/: capacity-full.html
deploy/traefik/: traefik.yml
docs/: architecture.md  configuration.md  development.md  gallery.md  getting-started.md  index.md  integrated-build.md  offline-pmtiles.md
docs/api/: app.md  bluesky-client.md  index.md  integrated.md  proxy-handlers.md  proxy-managers.md  proxy.md  server.md  utils.md
docs/frontend/: index.md
docs/screenshots/: README.md
frontend/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json  typedoc.json  vitest.config.ts  webpack.config.js
frontend/scripts/: vendor-assets.js
frontend/src/: main.ts  setup.test.ts
frontend/src/core/: App.ts  ConnectionStatusService.test.ts  ConnectionStatusService.ts  ShapeStore.ts  SocketManager.test.ts  SocketManager.ts  StateManager.test.ts  StateManager.ts  shapePayload.test.ts  shapePayload.ts
frontend/src/data/: CommandHandler.test.ts  CommandHandler.ts  CommandSignature.test.ts  CommandSignature.ts  DataProcessor.test.ts  DataProcessor.ts  aircraftCategories.test.ts  aircraftCategories.ts  aircraftDimensions.test.ts  aircraftDimensions.ts  aircraftModels.test.ts  aircraftModels.ts  aircraftTypes.ts  navdataSearch.ts  types.ts
frontend/src/integrated/: ProcessControlManager.test.ts  ProcessControlManager.ts  ServerLogStreamManager.test.ts  ServerLogStreamManager.ts  index.ts  settingsServerControls.test.ts  settingsServerControls.ts
frontend/src/types/: globals.d.ts
frontend/src/ui/: BlueSkyFileManager.test.ts  BlueSkyFileManager.ts  CommandHistory.test.ts  CommandHistory.ts  CommandListView.ts  CommandPaletteModal.ts  ConnectionManager.ts  Console.sendButton.test.ts  Console.ts  ConsoleAutocomplete.ts  ConsoleManager.ts  ConsoleMapPicker.test.ts  ConsoleMapPicker.ts  Controls.ts  EchoManager.ts  Header.ts  LogStreamManager.test.ts  LogStreamManager.ts  ModalManager.test.ts  ModalManager.ts  Modals.test.ts  Modals.ts  OutputFileBrowser.ts  ServerManager.ts  SettingsModal.test.ts  SettingsModal.ts  StatusDisplayManager.ts  consoleTokens.test.ts  consoleTokens.ts
frontend/src/ui/map/: BaseDrawingManager.test.ts  BaseDrawingManager.ts  EntityRenderer.test.ts  EntityRenderer.ts  MapDisplay.ts  MapOverlay.test.ts  MapOverlay.ts  MapStyleManager.test.ts  MapStyleManager.ts  NavSearchBox.ts  NavaidSnapper.ts  NavdataRenderer.ts  TerrainToggleControl.ts  customStyles.test.ts  customStyles.ts
frontend/src/ui/map/aircraft/: Aircraft2DRenderer.test.ts  Aircraft2DRenderer.ts  Aircraft3DCustomLayer.ts  Aircraft3DFleet.test.ts  Aircraft3DFleet.ts  Aircraft3DModelLoader.test.ts  Aircraft3DModelLoader.ts  Aircraft3DRenderer.ts  (+14 more)
frontend/src/ui/panels/: AircraftClickSelector.test.ts  AircraftClickSelector.ts  BasePanel.test.ts  BasePanel.ts  PanelResizer.test.ts  PanelResizer.ts
frontend/src/utils/: Logger.test.ts  Logger.ts  StorageManager.test.ts  StorageManager.ts  ThemeManager.test.ts  ThemeManager.ts  dom.ts  dropdown.ts  events.ts  geojson.test.ts  geojson.ts  maplibre.test.ts  maplibre.ts
script/: README.md  build_assets_tarball.sh  build_docker.sh  build_docs.sh  build_frontend.sh  build_navdata_tiles.sh  build_release_tarball.sh  build_ts.sh  check_frontend.sh  parse_xplane.py  run_webatm.sh  wsgi.py  wsgi_integrated.py
tests/: __init__.py  conftest.py  test_app.py  test_bluesky_client.py  test_bluesky_concurrency.py  test_bluesky_connection.py  test_command_processor.py  test_data_manager.py  test_handler_base.py  test_handlers.py  test_logger.py  test_node_manager.py  test_proxy_core.py  test_routes_files.py  test_server_status.py  test_session_manager.py  test_socket_handlers.py  test_subscribers.py  test_utils.py
webatm-integrated/: conftest.py
webatm-integrated/tests/: test_bluesky_paths.py
(+47 files in other folders)
