[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webatm"
version = "0.1.0"
description = "BlueSky Air Traffic Management Web Client"
requires-python = ">=3.13"
dependencies = [
    "flask>=2.0.0",
    "flask-socketio>=5.0.0",
    "numpy>=1.21.0",
    "msgpack>=1.0.0",
    "pyzmq>=22.0.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
prod = [
    "gunicorn>=20.0.0",
    "eventlet>=0.33.0",
]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ipython>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["WebATM*"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["WebATM"]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"