[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webatm"
version = "0.6.1"
description = "BlueSky Air Traffic Management Web Client"
requires-python = ">=3.13"
dependencies = [
    "flask>=2.0.0",
    "flask-socketio>=5.0.0",
    "numpy>=1.21.0",
    "msgpack>=1.2.1",
    "pyzmq>=22.0.0",
    "requests>=2.25.0",
]

# Runtime-only extras (installed in production with `uv sync --extra prod`).
[project.optional-dependencies]
prod = [
    "gunicorn>=20.0.0",
    "eventlet>=0.33.0",
]

# Development tooling lives in PEP 735 dependency groups so that a bare
# `uv sync` installs the `dev` group automatically (great for testing/linting),
# while none of this is ever published as part of the package or pulled into
# production images. Docs tooling is split into its own `docs` group (opt-in
# via `uv run --group docs ...` or `uv sync --group docs`) since it's only
# needed when building/serving the documentation site.
[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ipython>=8.0.0",
]
docs = [
    "mkdocs-literate-nav>=0.6.3",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["WebATM*"]

[tool.pytest.ini_options]
# Single entry point for both suites. Pick a subset with markers:
#   uv run pytest                # everything (core + integrated)
#   uv run pytest -m core        # core `webatm` package only
#   uv run pytest -m integrated  # optional `webatm_integrated` package only
testpaths = ["tests", "WebATM-integrated/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "core: tests for the core webatm package (tests/)",
    "integrated: tests for the optional webatm_integrated package (WebATM-integrated/tests/)",
]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
# The production WSGI entry point must call eventlet.monkey_patch() before any
# other import, so module-level imports legitimately follow executable code.
"script/wsgi.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["WebATM"]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
